# dht22-to-redis

./: .gitignore  Cargo.poml  Cargo.toml  pom.xml
src/: dht22.rs  gpio.rs  main.rs
